# ableton-mcp-extended

./: AGENTS.md  pyproject.toml
Ableton-MCP_hybrid-server/AbletonMCP_UDP/: __init__.py
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: eq_apply.py  plugin_aliases.py  server.py  spectrum_analyzer.py
Producer_Pal_extracted/: LICENSE  manifest.json  package.json  producer-pal-portal.js
Producer_Pal_extracted/licenses/: README.md  express-license  google-genai-license  marked-license  mcp-typescript-sdk-license  preact-license  tailwindcss-license  zod-license  zod-to-json-schema-license
elevenlabs_mcp/: server.py  utils.py
tests/unit/: test_eq_apply.py  test_spectrum_analyzer.py  test_spectrum_tools.py
