[project]
name = "ableton-mcp-extended"
version = "1.0"
description = "Ableton Live integration through the Model Context Protocol with ElevenLabs and extended features"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "uisato"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "elevenlabs>=0.2.26",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]
[project.scripts]
ableton-mcp-extended = "MCP_Server.server:main"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["MCP_Server", "elevenlabs_mcp"]
[project.urls]
"Homepage" = "https://github.com/uisato/ableton-mcp-extended"
"Bug Tracker" = "https://github.com/uisato/ableton-mcp-extended/issues"
[project.optional-dependencies]
xy_controller = [
    "pynput>=1.7.6",
    "screeninfo>=0.8.1",
]
spectrum = [
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "numpy>=1.24.0",
]
[tool.ruff]
line-length = 120
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
[tool.ruff.format]
quote-style = "double"
[tool.pytest.ini_options]
markers = [
    "integration: requires running Ableton Live instance",
]
addopts = "-m 'not integration'"